--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="images/taco1.jpg" alt="Taco with guacamole." /> 
+    <img src="images/taco1.jpeg" alt="Taco with guacamole." /> 
   </div>
   <div class="textContainer">
     <h1>Pizza!</h1>
