--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>My Favorite Pizza</title>
+<title>My Favorite Taco</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
 
@@ -19,7 +19,7 @@
     <img src="images/taco1.jpeg" alt="Taco with guacamole." /> 
   </div>
   <div class="textContainer">
-    <h1>Pizza!</h1>
+    <h1>Tacos!</h1>
     <p>My Favorite Toppings: </p>
     <ul>
       <li>Cheese</li>
